# docs/swagger.yaml
@@ -1311,6 +1311,30 @@ paths:
       summary: Toggle provider active status
       tags:
       - Providers
+  /providers/active:
+    get:
+      description: Retrieve a list of provider configurations matching the environment
+        (live or test) of the provided API key.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.SwaggerProviderConfigListResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.SwaggerSimpleResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.SwaggerSimpleResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: List active providers for the API Key environment
+      tags:
+      - Providers
   /providers/live:
     get:
       description: Retrieve list of all provider configs for the live environment
